# Farmer_local

./: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt
script/: create_wolt_account.py  init_db.py  migrate.py
src/: helpers.py  logger.py  setting.py
src/cloud_types/: __init__.py
src/database/: __init__.py  database.py  migration.sql  model.py
src/database/migration/_migration/: 0001.sql  0002.sql
src/database/models/: __init__.py  code.py  wolt_account.py  wolt_token.py  youtube_video.py
src/farmer/: farmer_local.py
src/farmer_local/: __init__.py  farmer_local.py
src/redeemer/: __init__.py  errors.py  redeemer.py  wolt.py
src/videoProcessor/: __init__.py  cloud_vp.py  video_processor.py
src/video_processor/: __init__.py  cloud_vp.py  video_processor.py
src/watcher/: __init__.py  errors.py  watcher.py
src/watcher/youtube_api/: __init__.py  youtube_api.py
test/: conftest.py  test_farmer.py
test/mocks/: cloud_mock.py  redeemer_mock.py
test/test_farmer/: test_farmer.py
